--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -57,6 +57,18 @@ jobs:
           platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-      - name: Publish if main
+      - name: Build and push Docker image
         if: github.ref == 'refs/heads/main'
-        uses: stonegray/speedtest2ha/.github/workflows/publish.yaml@main
+        uses: docker/build-push-action@v2
+        with:
+          builder: ${{ steps.buildx.outputs.name }}
+          context: .
+          push: true
+          platforms: linux/amd64,linux/arm64
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+      - uses: meeDamian/sync-readme@v1.0.6
+        if: github.ref == 'refs/heads/main'
+        with:
+          pass: ${{ secrets.DOCKER_PASSWORD }}
+          description: true
