--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,6 +8,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - uses: Klemensas/action-autotag@stable
+        if: github.ref == 'refs/heads/main'
+        with:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
       - name: Prepare
         id: prep
         run: |
