--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,7 +1,11 @@
 name: Build
 
 # Controls when the workflow will run
-on: [push]
+on:
+  push:
+    branches:
+      - main
+      - dev
 jobs:
   build:
     runs-on: ubuntu-latest
