--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "dependencies": {
     "async-mqtt": "^2.6.3",
-    "mqtt": "^4.3.7",
+    "fast-speedtest-api": "^0.3.2",
     "node-cron": "^3.0.2"
   },
   "name": "speedtest2ha",
   "description": "Speedtest results in Home Assistant via MQTT.",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
