--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+      - run: npm ci
       - uses: butlerlogic/action-autotag@master
         if: github.ref == 'refs/heads/main'
         env:
