--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
       - uses: actions/setup-node@v3
       - run: npm ci
-      - uses: butlerlogic/action-autotag@master
+      - uses: butlerlogic/action-autotag@stable
         if: github.ref == 'refs/heads/main'
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
